refactor(#3622): Update processors to use IStreamPipesDataProcessor